Fix hero image overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,12 +63,12 @@
 }
 
 .my-dev-image-2{
-  top: -105%;
+  top: -85%;
   right: auto;
   width: 20px;
   height: 50px;
   bottom: 0;
-  left: -15%;
+  left: -25%;
   background-color: #e5e5e5;
 }
 
@@ -251,7 +251,7 @@
 }
 
 .my-web-img-2{
-  top: -105%;
+  top: -85%;
   right: auto;
   width: 20px;
   height: 50px;
@@ -305,7 +305,7 @@
   height: 340px;
   background-color: #333;
   border-radius: 21px;
-  transform: rotate(30deg);
+  transform: rotate(20deg);
 }
 
 .my-gui-img::before{
@@ -320,12 +320,12 @@
 }
 
 .my-gui-img-2{
-  top: -70%;
+  top: -40%;
   right: auto;
   width: 20px;
   height: 50px;
   bottom: 0;
-  left: -30%;
+  left: -55%;
   background-color: #e5e5e5;
 }
 
@@ -397,7 +397,7 @@
   width: 20px;
   height: 50px;
   bottom: 0;
-  left: -35%;
+  left: -50%;
   background-color: #e5e5e5;
 }
 
@@ -546,4 +546,11 @@
 
 .navbar .nav-link {
     color: #000000 !important;
+}
+
+@media (max-width: 768px) {
+    .about-bg {
+        background-size: contain;
+        min-height: 250px;
+    }
 }
